_dev.scss: Fix header alignmen on Safari.

--- a/src/scss/ia/_dev.scss
+++ b/src/scss/ia/_dev.scss
@@ -34,8 +34,8 @@ $frm__input-size: 24em;
 }
 
 .ia-single--name {
-    span[class="frm__select"] {
-        vertical-align: super;
+    h2 {
+        vertical-align: middle;
     }
 }
 
